# ResumeScreenAgent

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
src/: dataextraction.py  model.py
utils/: prompt.py  savetocsv.py
